tab: fix alignment and no id support

--- a/components/common/variables.scss
+++ b/components/common/variables.scss
@@ -31,5 +31,5 @@ $font-weight-medium: 500;
 $font-weight-bold: 700;
 $font-weight-black: 900;
 
-$font-ascent: 0.107;
+$font-ascent: 0.39285;
 $font-descent: 0.25;
